--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ section div a{
     padding: 10px;
     width: 60%;
     text-align: center;
+    color: white;
+    font-family: arial;
+    text-decoration: none;
+    font-weight: bold;
 }
 </style>
 </head>
