ajustes de código

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ section div a{
     font-family: arial;
     text-decoration: none;
     font-weight: bold;
+    border-radius: 4px;
+    line-height: 2.5;
 }
 </style>
 </head>
@@ -37,8 +39,8 @@ section div a{
         <div>
             <a href="https://www.w3schools.com">Cardápio de encomendas natal e copa</a>
             <a href="https://www.w3schools.com">Delivery</a>
-            <a href="https://www.w3schools.com">Delivery</a>
-            <a href="https://www.w3schools.com">Delivery</a>
+            <a href="https://www.w3schools.com">whatsapp</a>
+            <a href="https://www.w3schools.com">Endereço</a>
         </div>
     </section>
     <footer></footer>
