--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ section div a{
     width: 60%;
     text-align: center;
     color: white;
-    font-family: arial;
+    font-family: sans-serif;
     text-decoration: none;
     font-weight: bold;
-    border-radius: 4px;
+    border-radius: 5vh;
     line-height: 2.5;
 }
 </style>
