--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ section div a{
     padding: 10px;
     width: 60%;
     text-align: center;
-    color: white;
-    font-family: sans-serif;
+    color: pink;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     font-weight: bold;
     border-radius: 5vh;
@@ -38,7 +38,7 @@ section div a{
     <section>
         <div>
             <a href="https://www.w3schools.com">Cardápio de encomendas natal e copa</a>
-            <a href="https://www.w3schools.com">Delivery</a>
+            <a href="https://www.google.com">Delivery</a>
             <a href="https://www.w3schools.com">whatsapp</a>
             <a href="https://www.w3schools.com">Endereço</a>
         </div>
