--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ section div a{
     font-family: sans-serif;
     text-decoration: none;
     font-weight: bold;
-    border-radius: 5vh;
+    border-radius: 10px;
     line-height: 2.5;
 }
 </style>
