--- a/index.html
+++ b/index.html
@@ -5,23 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empório do pão</title>
     <link rel="stylesheet" href="./css/default.css">
+
 </head>
 <body>
     <header>
-<div>
+<div class ="right social-icons">
+    <a href="tel:+5521967694562" target="_blank" class="white">
+    <img src="./img/icons/phone-alt-solid.svg" alt="telefone" height="20">
     +55 21 96769-4562
+    </a>
+    <a href="https://wwww.facebook.com" target="_blank">
+         <img src="./img/icons/facebook-square.svg" alt="atalho para o facebook" height="20">
+    </a>
+    <a href="https://www.instagram.com" target="_blank">
+         <img src="./img/icons/instagram-square.svg" alt="atalho para o instagram" height="20">
+    </a>
 </div>
-<nav>
-    <a href="#">Inicio</a>
-    <a href="#">Quem somos</a>
-    <a href="#">Produtos</a>
-    <a href="#">Cardápio</a>
-    <a href="#">Localização</a>
-    <a href="#">Contato</a>
-</nav>
-<div>
+<nav class="flex-nav">
+    <div>
+        <a href="#">Inicio</a>
+        <a href="#">Quem somos</a>
+        <a href="#">Produtos</a>
+    </div>
+    <div>
     <img src="./img/logo-certa.png" alt="Logo da loja emporio" height="100">
-</div>
+    </div>
+    <div>
+        <a href="#">Cardápio</a>
+        <a href="#">Localização</a>
+        <a href="#">Contato</a>
+    </div>
+    
+</nav>
+
     </header>
     <section>
 
