--- a/index.html
+++ b/index.html
@@ -72,8 +72,43 @@
             </button>
           </div>
     </section>
-    <footer>
 
-    </footer>   
+ <section class="container">
+   <div class="row">
+     <div class ="col-12 text-center">
+      <h3 class="gold">Desde 1997</h3>
+      <h2 class="">Confeitaria e Panificadora Empório do pão</h2>       
+     </div>
+     <div class ="p-2 col-12 col-md-6">
+       <p class ="text-align">
+      <span class="gold">U</span>
+       ma das mais amplas panificadoras e confeitarias de Campo Grande MS. Visa manter a qualidade e a variedade de seus Produtos,
+       além de manter o melhor relacionamento e atendimento à família sul-matogrossense.
+       Produtos coma qualidade panificadora e confeitaria Empório do pão. 
+      </p>
+     </div>
+     <div class =" p-2 col-12 col-md-6">
+       <div class=" row">
+         <div class="col-12 col-md-6">
+           <img src="./img/foto1.jpg" alt="" class="w-100">
+          </div>
+         <div class="p-2 col-12 col-md-6">
+           <img src="./img/foto2.jpg" alt="" class="w-100">
+         </div>
+         <div class="p-2 col-12 col-md-6">
+           <img src="./img/foto3.jpg" alt="" class="w-100">
+         </div>
+         <div class="p-2 col-12 col-md-6">
+           <img src="./img/foto4.jpg" alt="" class="w-100">
+         </div>
+       </div>
+     </div>
+   </div> 
+ </section>
+
+ <footer>
+
+ </footer> 
+
 </body>
 </html>
