--- a/index.html
+++ b/index.html
@@ -25,20 +25,27 @@
          <img src="./img/icons/instagram-square.svg" alt="atalho para o instagram" height="20">
     </a>
 </div>
-<nav class="flex-nav">
+<nav class=" navbar navbar-expand-lg">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-nav" id="navbarSupportedContent">
     <div>
         <a href="#">Inicio</a>
         <a href="#">Quem somos</a>
         <a href="#">Produtos</a>
     </div>
     <div>
-    <img src="./img/logo-certa.png" alt="Logo da loja emporio" height="100">
+    <img class="logo"src="./img/logo-certa.png" alt="Logo da loja emporio" height="100">
     </div>
     <div>
         <a href="#">Cardápio</a>
         <a href="#">Localização</a>
         <a href="#">Contato</a>
     </div>
+    </div>
+  </div>
        
 </nav>
 
@@ -77,15 +84,16 @@
    <div class="row">
      <div class ="col-12 text-center">
       <h3 class="gold">Desde 1997</h3>
-      <h2 class="">Confeitaria e Panificadora Empório do pão</h2>       
+      <h2 class="bold">CONFEITARIA E PANIFICADORA EMPÓRIO DO PÃO</h2>       
      </div>
      <div class ="p-2 col-12 col-md-6">
-       <p class ="text-align">
-      <span class="gold">U</span>
+       <p class ="p-2 text-align">
+      <span class="gold-font">U</span>
        ma das mais amplas panificadoras e confeitarias de Campo Grande MS. Visa manter a qualidade e a variedade de seus Produtos,
        além de manter o melhor relacionamento e atendimento à família sul-matogrossense.
        Produtos coma qualidade panificadora e confeitaria Empório do pão. 
       </p>
+      <h3 class="send">SOLICITAR ENCOMENDA</h3>
      </div>
      <div class =" p-2 col-12 col-md-6">
        <div class=" row">
