--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empório do pão</title>
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/default.css">
@@ -19,10 +18,10 @@
     +55 21 96769-4562
     </a>
     <a href="https://wwww.facebook.com" target="_blank">
-         <img src="./img/icons/facebook-square.svg" alt="atalho para o facebook" height="20">
+    <img src="./img/icons/facebook-square.svg" alt="atalho para o facebook" height="20">
     </a>
     <a href="https://www.instagram.com" target="_blank">
-         <img src="./img/icons/instagram-square.svg" alt="atalho para o instagram" height="20">
+    <img src="./img/icons/instagram-square.svg" alt="atalho para o instagram" height="20">
     </a>
 </div>
 <nav class=" navbar navbar-expand-lg">
@@ -93,7 +92,9 @@
        além de manter o melhor relacionamento e atendimento à família sul-matogrossense.
        Produtos coma qualidade panificadora e confeitaria Empório do pão. 
       </p>
-      <h3 class="send">SOLICITAR ENCOMENDA</h3>
+      <button class="styled">
+      SOLICITAR ENCOMENDA
+      </button>
      </div>
      <div class =" p-2 col-12 col-md-6">
        <div class=" row">
